    [!] Some languages were not being logged into databases
    [!] An issue that prevented the shutdown of the databases correctly on Server Stop
    [!] Error Spam on a rare occasion when a set of String contains the symbol '$'
    [!] Some typos in translated files

Changes
    [*] Databases Structure ( No user interaction is required, the plugin will take care of it )
    [*] OP now gets logged by default
    [*] Vault Checker has been increased to 6000 in the config by default
    [*] Vault Checker will no longer Log in if no one is online
    [*] Commands handling improvements
    [*] Huge improvement to the external database logging

<-!------------------------------------------ v1.8.1 ------------------------------------------!->

Additions
    [+] Plugin Prefix
    [+] 1.7 server versions enums
    [+] Item Frame Place & Break Checkers
    [+] ArmorStand Place & Break Checkers
    [+] EndCrystal Place & Break Checkers
    [+] 1.19.2 Support
    [+] Server Switch Checker on BungeeCord Instance
    [+] PartyAndFriend Plugin Support on BungeeCord Instance
    [+] NL Language file

Fixes
    [!] Plugin not starting up correctly
    [!] The null value of a player's IP on database ( even when enabled in config )
    [!] Vault Checker Issue which causes a high TPS loss
    [!] Entity Death not working correctly
    [!] Reload command not reloading from the config
    [!] Commands not working in console
    [!] LiteBans table not auto deleting on Velocity instance
    [!] Commands not working from console
    [!] RCON not logging into Files

Changes
    [*] Remade permissions which will log OP and NOT OP players until they're permitted with the exempt permission
    [*] Inventory Restore Menu Title names to eliminate conflicts between other plugins
    [*] Minor messages changes
    [*] Minor Velocity & Bungee Code improvements
    [*] Changed BungeeCord commands to /loggerb and Velocity to /loggerv

Removed
    [-] IP Column from RCON checher
